index.html: changed title

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, maximum-scale=0.8" />
-		<title>Match Up!</title>
+		<title>Hangman</title>
 	</head>
 	<body>
 		<div id="root"></div>
